log
Tue Apr 15 21:27:57 HSP 2025: 
 tests:  0|6
total_score: 0/70
eeef3b7
Tue, Apr 15, 2025 11:23:07 PM: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4887759
Wed, Apr 16, 2025 12:14:51 AM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
b8df6f7
Wed, Apr 16, 2025 12:15:26 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
64dfcd5
Wed, Apr 16, 2025 12:15:57 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fe70a75
Wed, Apr 16, 2025 12:16:32 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b0907b
Wed, Apr 16, 2025  8:09:22 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
94ea7b0
Wed, Apr 16, 2025  8:10:04 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
dbfb957
Wed, Apr 16, 2025  8:15:03 AM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:91:61: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         if(is_equal(key, map->buckets[pos]->key)) return map->current;
                                                          ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
2a6f5fa
Wed, Apr 16, 2025  8:15:08 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:91:61: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         if(is_equal(key, map->buckets[pos]->key)) return map->current;
                                                          ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
4a2088c
Wed, Apr 16, 2025  8:15:18 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:91:61: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         if(is_equal(key, map->buckets[pos]->key)) return map->current;
                                                          ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
4a12de3
Wed, Apr 16, 2025  8:15:59 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
29d1cd9
Wed, Apr 16, 2025  8:17:31 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
851d839
Wed, Apr 16, 2025  8:26:53 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  8|3
total_score: 40/70
03035a0
Wed, Apr 16, 2025  8:27:22 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
ae7d9c0
Wed, Apr 16, 2025  8:27:50 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
7e4eeac
Wed, Apr 16, 2025  8:32:27 AM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  12|2
total_score: 50/70
6ea85cb
Wed, Apr 16, 2025  8:38:07 AM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:119:25: error: 'i' undeclared (first use in this function)
         if(map->buckets[i] != NULL){
                         ^
hashmap.c:119:25: note: each undeclared identifier is reported only once for each function it appears in
69180c3
Wed, Apr 16, 2025  8:38:43 AM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  12|2
total_score: 50/70
2ab5502
Wed, Apr 16, 2025  8:39:40 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
d189b68
Wed, Apr 16, 2025  8:40:04 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
22b3432
Wed, Apr 16, 2025  8:41:25 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
dbd771c
Wed, Apr 16, 2025  8:42:07 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
c6d398b
Wed, Apr 16, 2025  8:42:26 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
03013c4
Wed, Apr 16, 2025  8:42:52 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
c3ee923
Wed, Apr 16, 2025  8:43:20 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
ab72ab3
Wed, Apr 16, 2025  8:46:29 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  16|1
total_score: 60/70
4bd7ed8
Wed, Apr 16, 2025  8:47:09 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
031e0c1
Wed, Apr 16, 2025  8:50:22 AM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:61:12: error: unused variable 'OldBuckets' [-Werror=unused-variable]
     Pair **OldBuckets = map->buckets;
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
21c06eb
Wed, Apr 16, 2025  8:50:26 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:61:12: error: unused variable 'OldBuckets' [-Werror=unused-variable]
     Pair **OldBuckets = map->buckets;
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
59f0d6b
Wed, Apr 16, 2025  8:50:30 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:61:12: error: unused variable 'OldBuckets' [-Werror=unused-variable]
     Pair **OldBuckets = map->buckets;
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
b689fa9
Wed, Apr 16, 2025  9:05:06 AM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:73:18: error: statement with no effect [-Werror=unused-value]
     map->current -1;
     ~~~~~~~~~~~~~^~
cc1.exe: all warnings being treated as errors
986cf51
Wed, Apr 16, 2025  9:05:19 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:73:18: error: statement with no effect [-Werror=unused-value]
     map->current -1;
     ~~~~~~~~~~~~~^~
cc1.exe: all warnings being treated as errors
31ac339
Wed, Apr 16, 2025  9:05:25 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:73:18: error: statement with no effect [-Werror=unused-value]
     map->current -1;
     ~~~~~~~~~~~~~^~
cc1.exe: all warnings being treated as errors
003b4d5
